test/scc/expr/semantic-errors/108.t
void foo(int a)
{
    
}

void test()
{
	void* a;
    foo(a);
}